# pr-dashboard

./: .env.example  .gitignore  .mend  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  TODO.md  mendLicenseCheck.csv
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  001_add_tracking_columns.py  002_add_assignee_id_to_pull_requests.py  003_merge_merge_assignee_and_github_reviews_.py  004_add_users_spaces_drop_team_members.py  005_add_github_accounts_refactor_spaces.py  006_add_space_visibility.py  007_move_visibility_to_repos.py  428badc2d81e_add_unresolved_thread_count_to_pull_.py  a66a3ecc331d_add_commenters_column_to_pull_requests.py  d93d8601050b_add_github_webhook_id_to_tracked_repos.py  f979047596b7_add_ado_accounts_table.py  fa68a6a436de_add_work_item_links_table.py
backend/src/: main.py
backend/src/api/: accounts.py  ado_accounts.py  auth.py  events.py  prioritize.py  progress.py  pulls.py  repos.py  schemas.py  spaces.py  stacks.py  team.py  version.py  webhook_admin.py  webhooks.py  work_items.py
backend/src/config/: settings.py
backend/tests/: conftest.py  test_ado_security.py  test_api_progress.py  test_api_repos.py  test_api_team.py  test_auth.py  test_auth_health.py  test_ci_review_status.py  test_github_client.py  test_github_error_handling.py  test_github_retry.py  test_github_security.py  test_labels.py  test_oauth_dedup.py  test_pr_helpers.py  test_priority.py  test_review_scoring.py  test_security_integration.py  test_space_visibility.py  test_stack_detector.py
(+50 files in other folders)
